# taskship

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  specship.config.json
.claude/: settings.json
.claude/agents/: specship-explorer.md
.claude/commands/specship/: check.md  explore.md  spec.md
.github/workflows/: deploy-site.yml
.specship/: .gitignore
site/: astro.config.mjs  package-lock.json  package.json
site/src/components/: CTA.astro  Doors.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  Nav.astro  Pipeline.astro  Problem.astro  Terminal.astro
site/src/layouts/: Base.astro
site/src/pages/: guide.astro  index.astro
site/src/styles/: global.css
specs/: delivery-pipeline.md  knowledge.md  landing-site.md  onboard.md  taskship.md  three-doors.md  vision.md
specs/per-node-render-error-boundary/: brief.md
taskship/: __init__.py  cascade.py  ceremonies.py  cli.py  connect.py  decompose.py  identity.py  jira.py  knowledge.py  mcp_server.py  model.py  onboard.py  payload.py  plan_io.py  reconcile.py  render.py  scaffold.py  session.py  state.py  status.py  templates.py
taskship/builtin_templates/: biz-spec.yaml  devops.yaml  docs.yaml  imported.yaml  ops-observation.yaml  qa.yaml  tech-spec.yaml  test-case.yaml  uat-issue.yaml
tests/: fakes.py  test_assignee.py  test_cascade.py  test_ceremonies.py  test_cli.py  test_conflict.py  test_decompose.py  test_dry_run.py  test_identity.py  test_knowledge.py  test_model.py  test_observe.py  test_onboard.py  test_orphans.py  test_plan_io.py  test_raise.py  test_ratelimit.py  test_reconcile.py  test_recovery.py  test_session.py  test_sprint.py  test_status.py  test_templates.py  test_testplan.py
tests/fixtures/: valid_plan.yaml
