[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskship"
version = "0.1.0"
description = "Plan-as-code planning layer over Jira"
readme = "specs/taskship.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "click>=8",
]

[project.scripts]
taskship = "taskship.cli:cli"
taskship-mcp = "taskship.mcp_server:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["taskship"]

[tool.hatch.build.targets.sdist]
only-include = ["taskship", "tests", "specs/taskship.md", "specship.config.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
